--- a/implementation/matomo/docker-compose.yml
+++ b/implementation/matomo/docker-compose.yml
@@ -6,12 +6,17 @@ services:
     image: matomo:5.1.2 # 2024-09-25
     container_name: matomo
     environment:
-      - MATOMO_DATABASE_HOST=db
+      #? comment -- to use the .env.db file
       - MATOMO_DATABASE_ADAPTER=mysql
       - MATOMO_DATABASE_TABLES_PREFIX=matomo_
       - MATOMO_DATABASE_USERNAME=matomo
-      - MATOMO_DATABASE_PASSWORD=matomo_password
+      - MATOMO_DATABASE_PASSWORD=change_me_in_production!!
       - MATOMO_DATABASE_DBNAME=matomo_db
+    #! uncomment -- to use with the hosted database
+    #      - MATOMO_DATABASE_HOST=cloud.db.com/your_db
+    #      - MATOMO_DATABASE_PORT=3354
+    env_file:
+      - ./.env.db
     volumes:
       #     - ./config:/var/www/html/config:z
       #     - ./logs:/var/www/html/logs:z
@@ -27,10 +32,13 @@ services:
     container_name: matomo_db
     command: --max-allowed-packet=64MB
     environment:
-      - MYSQL_ROOT_PASSWORD=root_password
+      - MYSQL_ROOT_PASSWORD=change_me_in_production!!
+      - MARIADB_AUTO_UPGRADE=1
+      - MARIADB_DISABLE_UPGRADE_BACKUP=1
       - MYSQL_DATABASE=matomo_db
       - MYSQL_USER=matomo
-      - MYSQL_PASSWORD=hello_please_change_me_in_production!!
+    env_file:
+      - ./.env.db
     volumes: # persist data if the image is turned off
       - ./db:/var/lib/mysql:Z # Z is for SELinux (Security-Enhanced Linux)
         # used for fedora and centos to avoid permisisons issues
@@ -41,7 +49,7 @@ services:
 #    image: nginx:alpine
 #    restart: always
 #    volumes:
-#      - matomo:/var/www/html:z,ro
+#      - matomo:/var/www/html:z,ro # ro -> read only
 #      # see https://github.com/matomo-org/matomo-nginx
 #      - ./matomo.conf:/etc/nginx/conf.d/default.conf:z,ro
 #    ports:
