--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignores all db folders in implementation folder
-implementation/**/db*/
+/temp/implementation/**/db*/
 
 # Ignores publications 
-publications/
+/temp/publications/
 
